@@ -1,3 +1,8 @@
+2008-12-02  Sam Steingold  <sds@gnu.org>
+
+	* modules/clx/new-clx/clx.f (XLIB:DRAW-ARC): use modprep signature
+	emulation instead of emulating it by hand
+
 2008-12-01  Sam Steingold  <sds@gnu.org>
 
 	Better keysym->char conversion for the sake of McCLIM
